samples/_failures_safe/1761254383_05add5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_31ed62b5.c: In function ‘main’:
./samples/SAFE/__tmp_31ed62b5.c:145:5: error: expected declaration or statement at end of input
  145 |     printf("\nCompressing...\n");
      |     ^~~~~~
